Cambios pmd findbugs y checkstyle