@@ -42,9 +42,9 @@ public class Cuenta {
 		this.id = id;
 	}
 
-	public Cuenta(Integer id) {
-		this(new Long(id));
-	}
+	public Cuenta(Integer id) {         
+		this(Long.valueOf(id));     
+		}
 
 	/**
 	 * Añade un cliente a la lista de titulares de esta cuenta
